--- a/index.html
+++ b/index.html
@@ -1,1 +1,37 @@
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>🌈 Projets Web Passionnés</title>
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <header>🌈 Projets Web Passionnés</header>
+  <nav>
+    <a href="#">Accueil</a>
+    <a href="#">Mes projets</a>
+    <a href="#">Contact</a>
+  </nav>
+  <main class="grid" id="site-grid">
+    <div class="site-card">
+      <div class="site-title">🐉 Agrion à fer de lance</div>
+      <div><a href="https://mdp2014.github.io/Agrion/">Voir le site</a></div>
+    </div>
+    <div class="site-card">
+      <div class="site-title">🐶🐱 Garde Animal (chiens et chats)</div>
+      <div><a href="https://mdp2014.github.io/upee/">Voir le site</a></div>
+    </div>
+    <div class="site-card">
+      <div class="site-title">💬 Messagerie</div>
+      <div><a href="https://mdp2014.github.io/messagerie/">Voir le site (le site où j'ai travaillé le plus)</a></div>
+    </div>
+  </main>
+  <footer>
+    ✨
+  </footer>
 
+  <script src="script.js"></script>
+</body>
+</html>
