--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
 <body>
   <header>🌈 Projets Web Passionnés</header>
   <nav>
-    <a href="#">Accueil</a>
-    <a href="#">Mes projets</a>
-    <a href="#">Contact</a>
+    <a href="">Contact</a>
   </nav>
   <main class="grid" id="site-grid">
     <div class="site-card">
@@ -20,7 +18,7 @@
       <div><a href="https://mdp2014.github.io/Agrion/">Voir le site</a></div>
     </div>
     <div class="site-card">
-      <div class="site-title">🐶🐱 Garde Animal (chiens et chats)</div>
+      <div class="site-title">🐶🐱 information sur les chiens et les chats</div>
       <div><a href="https://mdp2014.github.io/upee/">Voir le site</a></div>
     </div>
     <div class="site-card">
