--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <header>🌈 Projets Web Passionnés</header>
   <nav>
-    <a href="">Contact</a>
+    <a href="https://mdp2014.github.io/developpement/contactez.html">Contactez-moi si vous voulez créer un site Web!!!</a>
   </nav>
   <main class="grid" id="site-grid">
     <div class="site-card">
