--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="google-site-verification" content="ihL90wjMNFltesZhDEGBO1NVZSzFVN0tlwCv0VxdW-Q" />
-  <title>🌈 Projets Web Passionnés</title>
+  <title>🌈 Projets Web</title>
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>🌈 Projets Web Passionnés</header>
+  <header>🌈 Projets Web</header>
   <nav>
-    <a href="https://mdp2014.github.io/developpement/contactez.html">Contactez-moi si vous voulez créer un site Web!!!</a>
+    <a href="https://mdp2014.github.io/developpement/contactez.html">Contactez-moi si vous voulez créer un site Web ou besoin d'aide</a>
   </nav>
   <main class="grid" id="site-grid">
     <div class="site-card">
