--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div><a href="https://mdp2014.github.io/Agrion/">Voir le site</a></div>
     </div>
     <div class="site-card">
-      <div class="site-title">🐶🐱 information sur les chiens et les chats</div>
+      <div class="site-title">🐶🐱 information sur les chiens et les chats et papa !</div>
       <div><a href="https://mdp2014.github.io/upee/">Voir le site</a></div>
     </div>
     <div class="site-card">
