Fix bugs in user handling, geolocation, and message sending; update styles for chat messages

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Messagerie Instantanée</title>
-    <link rel="stylesheet" href="styles.css">
+    <!-- BUG FIX #9 : "styles.css" → "style.css" pour correspondre au fichier réel -->
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="login-container" id="login-container">
