Implement user registration feature with HTML, CSS, and JavaScript

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <input type="text" id="login-username" placeholder="Nom d'utilisateur">
         <input type="password" id="login-password" placeholder="Mot de passe">
         <button id="login-button">Se connecter</button>
+        <p class="inscription-link"><a href="inscription.html">S'inscrire</a></p>
     </div>
     <div class="connected-user" id="connected-user" style="display: none;">
         <p>Utilisateur connecté : <span id="connected-username"></span> <button id="logout-button">Déconnexion</button></p>
