Add typing indicator and notification functionality; enhance user experience during messaging

--- a/index.html
+++ b/index.html
@@ -37,6 +37,14 @@
                 <!-- Les options seront ajoutées ici par JavaScript -->
             </select>
         </div>
+        <!-- Indicateur "en train d'écrire" -->
+        <div class="typing-indicator" id="typing-indicator" style="display: none;">
+            <span class="typing-dots">
+                <span></span>
+                <span></span>
+                <span></span>
+            </span>
+        </div>
         <div class="chat-messages" id="chat-messages">
             <!-- Les messages seront affichés ici -->
         </div>
