--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Messagerie Instantanée - Améliorée</title>
-    <link rel="stylesheet" href="style-enhanced.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- Subtle grid texture layer -->
@@ -76,6 +76,6 @@
         </div>
     </div>
 
-    <script type="module" src="app-enhanced.js"></script>
+    <script type="module" src="app.js"></script>
 </body>
 </html>
