--- a/index.html
+++ b/index.html
@@ -50,11 +50,8 @@
         </div>
         
         <div class="chat-input">
-            <input type="file" id="file-input" accept="image/*,audio/*,video/*,.pdf,.doc,.docx" style="display: none;">
-            <button id="attach-button" class="icon-button" title="Joindre un fichier">📎</button>
-            <button id="voice-button" class="icon-button" title="Message vocal">🎤</button>
             <input type="text" id="message-input" placeholder="Tapez votre message…">
-            <button id="emoji-button" class="emoji-button" title="Ajouter un emoji">😊</button>
+            <button id="emoji-button" class="icon-button" title="Insérer un emoji">😊</button>
             <button id="send-button">Envoyer</button>
         </div>
         
